--- a/hugo.toml
+++ b/hugo.toml
@@ -2,6 +2,12 @@ baseURL = 'https://rohit.karadkar.com'
 languageCode = 'en-us'
 title = 'Rohit Karadkar'
 theme = 'henry'
+
+[author]
+  name = "Rohit Karadkar"
+  url = "https://rohit.karadkar.com"
+  email = "karadkar.rohit@gmail.com"
+
 [params]
     ExternalLinkIndicator = "»"
 
