Update github action

--- a/.github/workflows/cd.yaml
+++ b/.github/workflows/cd.yaml
@@ -43,6 +43,8 @@ jobs:
         with:
           submodules: recursive
           fetch-depth: 0
+      - name: Checkout Stable PaperMod Theme
+        run: cd themes/papermod; git checkout d6cd6d9
       - name: Setup Pages
         id: pages
         uses: actions/configure-pages@v4
@@ -59,7 +61,7 @@ jobs:
             --minify \
             --baseURL "${{ steps.pages.outputs.base_url }}/"          
       - name: Upload artifact
-        uses: actions/upload-pages-artifact@v2
+        uses: actions/upload-pages-artifact@v3
         with:
           path: ./public
 
