--- a/hugo.yml
+++ b/hugo.yml
@@ -16,6 +16,7 @@ params:
   defaultTheme: dark
   disableThemeToggle: true
   homeInfoParams:
+    imageUrl: "https://avatars.githubusercontent.com/u/8667140"
     Title: Hello, I'm Rohit 👋
     Content: A cyclist who builds Mobile apps for a living. Using this space to practice writing and document my learnings. Currently working at Thoughtworks.
   socialIcons:
