--- a/hugo.yml
+++ b/hugo.yml
@@ -15,6 +15,8 @@ menu:
 services:
   googleAnalytics:
     ID:  G-PB3NQBVN8K
+  rss:
+    limit: 50
 
 params:
   defaultTheme: dark
@@ -37,6 +39,8 @@ params:
       url: "https://www.twitter.com/rohitkaradkar_"
     - name: "email"
       url: "mailto:karadkar.rohit@gmail.com"
+    - name: "rss"
+      url: "/index.xml"
   ShowReadingTime: true
   ShowToc: true
   ShowBreadCrumbs: true
